# LoxInterpreter

clox/: CMakeLists.txt  chunk.c  chunk.h  common.h  compiler.c  compiler.h  debug.c  debug.h  main.c  memory.c  memory.h  object.c  object.h  scanner.c  scanner.h  value.c  value.h  vm.c  vm.h
jlox/src/me/shakedkod/lox/: ASTPrinter.java  Environment.java  Expression.java  Interpreter.java  Lox.java  LoxCallable.java  LoxClass.java  LoxFunction.java  LoxInstance.java  Parser.java  Resolver.java  Return.java  RuntimeError.java  Scanner.java  Statement.java  Token.java  TokenType.java
jlox/src/me/shakedkod/tool/: GenerateAST.java
jlox/test files/: Fibonacci.lox  test.lox
